--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <form class="login-form" onsubmit="handleLogin(event)">
@@ -18,7 +18,7 @@
         <div id="error-message" style="color: red; display: none;">Usuario No Registrado</div>
     </form>
 
-    <script src="../js/login.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 </html>
