--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <img src="img/logo.png" alt="logo">
     <form class="login-form" onsubmit="handleLogin(event)">
         <label for="codigo">Código de Estudiante:</label>
         <input type="text" id="codigo" required>
